# workspace-catalog

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
cli/: package.json
cli/src/: catalog-schema.js  confirm.js  documentation-guidance.js  drift.js  index.js  preflight.js  scanner.js  status.js  workspace-path.js
cli/src/collectors/: git.js  spectra.js
cli/test/: collectors.test.js  drift.test.js  index.test.js  preflight.test.js  scanner.test.js  status.test.js
docs/superpowers/plans/: 2026-06-30-workspace-catalog-platform.md
docs/superpowers/specs/: 2026-06-30-workspace-catalog-platform-design.md
examples/local-meeting-workspace/: catalog.example.yaml  workspace.catalog.example.yaml
hooks/: workspace-catalog-preflight.js  workspace-catalog-preflight.md  workspace-catalog-session-preflight.js
scripts/: install.sh  uninstall.sh
skills/workspace-catalog/: SKILL.md
skills/workspace-catalog/templates/: catalog.yaml  workspace.catalog.draft.yaml  workspace.catalog.yaml
src/: main.rs
